  - Refactor mact processing.  get rid of un-necessary variables and duplicated code.
  - Autoloader will now try to load modules.  Modules can still only be instantiated once.
  - Improved autoloader now handles namespaced module classes if the module is already loaded.
  - Adds new CmsError400Exception class.
  - Improve exception handling in include.php to handle when showtemplate is false.
  - Note: compatibility change
    - No longer handle {$actionid}showtemplate=false parameters.
    - No longer send id, returnid, action parameters in the action $params array.
    - No longer call LoadModules from include.php.. All modules are now loaded on demand.
    - Tthe deprecated $module->smarty property is now removed.
  - Optimize the cms_route_manager for performance
  - Adds ModuleOperations::is_module_loaded() method
  - Allow loading action controller classes of the with the name Module/Controllers/<action>_action
    The constructor is sent the module, the actionid and returnid parameters
    The invoke method is sent an array of parameters.
  - Adds CMSModule::get_controller() protected method to allow specifying custom controller mechanisms.
  - Gets rid of content.functions.php (last remaining function moved to page.functions.php)
  - Refactor the cms_module_plugin function for performance).
  - Refactor the route-lookup functionality for performance.
  - The database connection class now accepts a single scalar for an argument when only one parameter is required in functions like GetOne()
  - Remove the startup_mact_processing config entry, and replace it with content_processing_mode config entry that supports 3 values
    0 - no content processing.
    1 - do content processing AFTER the template page top
    2 - do content processing BEFORE any template processing.  (default)
    This config entry controls only when in the rendering, the default content block will be processed.