@@ -107,61 +107,3 @@ function cms_module_SetTemplate(&$modinstance, $tpl_name, $content, $modulename 
 		$db->Execute($query, array($content, $modulename != ''?$modulename:$modinstance->GetName(), $tpl_name));
 	}
 }
-
-/**
- * @access private
- */
-function cms_module_DeleteTemplate(&$modinstance, $tpl_name = '', $modulename = '')
-{
-	$db = CmsApp::get_instance()->GetDb();
-
-	$parms = array($modulename != ''?$modulename:$modinstance->GetName());
-	$query = "DELETE FROM ".CMS_DB_PREFIX."module_templates WHERE module_name = ?";
-	if( $tpl_name != '' ) {
-		$query .= 'AND template_name = ?';
-	    $parms[] = $tpl_name;
-	}
-	$result = $db->Execute($query, $parms);
-	return ($result == false)?false:true;
-}
-
-/**
- * @access private
- */
-function cms_module_ProcessTemplate(&$modinstance, $tpl_name, $designation = '', $cache = false, $cacheid = '')
-{
-    $ok = (strpos($tpl_name, '..') === false);
-    if (!$ok) return;
-
-    $smarty = $modinstance->GetActionTemplateObject();
-    if( !$smarty ) $smarty = Smarty_CMS::get_instance();
-    $result = $smarty->fetch('module_file_tpl:'.$modinstance->GetName().';'.$tpl_name, $cacheid, ($designation != ''?$designation:$modinstance->GetName()));
-
-   return $result;
-}
-
-/**
- * Given a template in a variable, this method processes it through smarty
- * note, there is no caching involved.
- * @access private
- */
-function cms_module_ProcessTemplateFromData(&$modinstance, $data)
-{
-    $smarty = $modinstance->GetActionTemplateObject();
-    if( !$smarty ) $smarty = Smarty_CMS::get_instance();
-    $_contents = $smarty->fetch('string:'.$data);
-    return $_contents;
-}
-
-/**
- * @access private
- */
-function cms_module_ProcessTemplateFromDatabase(&$modinstance, $tpl_name, $designation = '', $cache = false, $modulename = '')
-{
-    $smarty = $modinstance->GetActionTemplateObject();
-    if( !$smarty ) $smarty = Smarty_CMS::get_instance();
-    if( $modulename == '' ) $modulename = $modinstance->GetName();
-
-    $result = $smarty->fetch('module_db_tpl:'.$modulename.';'.$tpl_name, '', ($designation != ''?$designation:$modulename));
-    return $result;
-}
